...
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="6dp">

            <androidx.appcompat.widget.SearchView
                android:id="@+id/search_view"
                style="@style/SearchView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:clickable="true"
...
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_marginStart="6dp" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/search_layout" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/loading_view"
...
