<resources>
    <string name="app_name">Simple Urban Dictionary</string>
    <string name="go">GO</string>
    <string name="empty_error">Empty</string>
    <string name="no_results_found">No results</string>
</resources>
